syntax = "proto3";

package admin;

option go_package = "persacc/api/v1/admin;adminpb";

message Permission {
    int64 id = 1;
    string name = 2;
    string description = 3;
}

message CreatePermissionRequest {
    string name = 1;
    string description = 2;
}

message CreatePermissionResponse {
    Permission permission = 1;
}

message GetPermissionRequest {
    int64 id = 1;
}

message GetPermissionResponse {
    Permission permission = 1;
}

message UpdatePermissionRequest {
    int64 id = 1;
    string name = 2;
    string description = 3;
}

message UpdatePermissionResponse {
    Permission permission = 1;
}

message DeletePermissionRequest {
    int64 id = 1;
}

message DeletePermissionResponse {
    bool success = 1;
}

message ListPermissionsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListPermissionsResponse {
    repeated Permission permissions = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}
