syntax = "proto3";

package admin;

option go_package = "persacc/api/v1/admin;adminpb";

import "api/v1/admin/permission.proto";

message Role {
    int64 id = 1;
    string name = 2;
    repeated Permission permissions = 3;
}

message CreateRoleRequest {
    string name = 1;
    repeated int64 permission_ids = 2;
}

message CreateRoleResponse {
    Role role = 1;
}

message GetRoleRequest {
    int64 id = 1;
}

message GetRoleResponse {
    Role role = 1;
}

message UpdateRoleRequest {
    int64 id = 1;
    string name = 2;
    repeated int64 permission_ids = 3;
}

message UpdateRoleResponse {
    Role role = 1;
}

message DeleteRoleRequest {
    int64 id = 1;
}

message DeleteRoleResponse {
    bool success = 1;
}

message ListRolesRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListRolesResponse {
    repeated Role roles = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}
